--- a/DS1823xs+.yml
+++ b/DS1823xs+.yml
@@ -3,9 +3,11 @@ synoinfo: &synoinfo
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
   support_led_brightness_adjustment: "no"
-  supportssdcache: "no"
+  support_oob_ctl: "no"
   support_syno_hybrid_raid:
   supportraidgroup:
+  supportnvme: "yes"
+  support_m2_pool: "yes"
   maxlanport: "8"
   netif_seq: "0 1 2 3 4 5 6 7"
 cmdline: &cmdline
@@ -25,7 +27,7 @@ serial:
   suffix: "alpha"
 dom: 2
 dt: true
-disks: 12
+disks: 8
 beta: true
 builds:
   42962:
