configs: update for next release (23.7.10)
Signed-off-by: AuxXxilium <info@auxxxilium.tech>

--- a/RS1619xs+.yml
+++ b/RS1619xs+.yml
@@ -35,16 +35,14 @@ dom: 2
 disks: 4
 dt: false
 beta: true
-builds:
-  42962:
-    ver: "7.1.1"
+productvers:
+  "7.1.1":
     kver: "4.4.180"
     rd-compressed: false
     cmdline:
       <<: *cmdline
     synoinfo:
       <<: *synoinfo
-    dsm: "42962-1"
     patch:
       - "ramdisk-common-disable-root-pwd.patch"
       - "ramdisk-common-init-script.patch"
@@ -52,15 +50,13 @@ builds:
       - "ramdisk-42951-post-init-script.patch"
       - "ramdisk-42661-disable-disabled-ports.patch"
 
-  64570:
-    ver: "7.2"
+  "7.2":
     kver: "4.4.302"
     rd-compressed: false
     cmdline:
       <<: *cmdline
     synoinfo:
       <<: *synoinfo
-    dsm: "64570-1"
     patch:
       - "ramdisk-64216-disable-root-pwd.patch"
       - "ramdisk-64216-init-script.patch"
