--- a/SA3400.yml
+++ b/SA3400.yml
@@ -39,9 +39,8 @@ arc:
 disks: 12
 dt: false
 beta: true
-builds:
-  42962:
-    ver: "7.1.1"
+productvers:
+  "7.1.1":
     kver: "4.4.180"
     rd-compressed: false
     cmdline:
@@ -56,15 +55,13 @@ builds:
       - "ramdisk-42951-post-init-script.patch"
       - "ramdisk-42661-disable-disabled-ports.patch"
 
-  64570:
-    ver: "7.2.0"
+  "7.2":
     kver: "4.4.302"
     rd-compressed: false
     cmdline:
       <<: *cmdline
     synoinfo:
       <<: *synoinfo
-    dsm: "64570-1"
     patch:
       - "ramdisk-64216-disable-root-pwd.patch"
       - "ramdisk-64216-init-script.patch"
