configs: DVA3221: add back Arc Patch
Signed-off-by: AuxXxilium <info@auxxxilium.tech>

--- a/DVA3221.yml
+++ b/DVA3221.yml
@@ -28,12 +28,12 @@ serial:
     - "2150"
   middle: "SJR"
   suffix: "alpha"
-#arc:
-#  serial: "2040SRJRFRP6H"
-#  mac1: "001132CA2267"
-#  mac2: "001132CA2268"
-#  mac3: "001132CA2269"
-#  mac4: "001132CA2270"
+arc:
+  serial: "2040SJRFG6P6K"
+  mac1: "001132CA2267"
+  mac2: "001132CA2268"
+  mac3: "001132CA2269"
+  mac4: "001132CA2270"
 dom: 2
 disks: 4
 dt: false
@@ -56,7 +56,6 @@ productvers:
       - "ramdisk-42661-disable-disabled-ports.patch"
 
   "7.2":
-    ver: "7.2"
     kver: "4.4.302"
     rd-compressed: false
     cmdline:
