--- a/DS2419+.yml
+++ b/DS2419+.yml
@@ -20,8 +20,8 @@ platform: "denverton"
 unique: "synology_denverton_2419+"
 serial:
   prefix:
-  - "0000"
-  middle: "XXX"
+  - "1880"
+  middle: "QZA"
   suffix: "alpha"
 dom: 2
 dt: false
