--- a/DS423+.yml
+++ b/DS423+.yml
@@ -21,8 +21,8 @@ platform: "geminilake"
 unique: "synology_geminilake_423+"
 serial:
   prefix:
-  - "0000"
-  middle: "XXX"
+  - "22A0"
+  middle: "VKR"
   suffix: "alpha"
 dom: 2
 dt: true
