--- a/DS1819+.yml
+++ b/DS1819+.yml
@@ -20,8 +20,8 @@ platform: "denverton"
 unique: "synology_denverton_1819+"
 serial:
   prefix:
-  - "0000"
-  middle: "XXX"
+  - "2110"
+  middle: "SKR"
   suffix: "alpha"
 dom: 2
 dt: false
