--- a/DS1821+.yml
+++ b/DS1821+.yml
@@ -1,4 +1,4 @@
-id: "FS3017"
+id: "DS1821+"
 synoinfo: &synoinfo
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
@@ -7,48 +7,50 @@ synoinfo: &synoinfo
   supportraidgroup:
   maxlanport: "8"
   netif_seq: "0 1 2 3 4 5 6 7"
-  buzzeroffen: "0xffff"
 cmdline: &cmdline
+  HddHotplug: 0
   synoboot2:
+  syno_hdd_detect: 0
+  syno_hdd_powerup_seq: 0
   SMBusHddDynamicPower: 1
   vender_format_version: 2
   syno_ttyS0: "serial,0x3f8"
   syno_ttyS1: "serial,0x2f8"
   elevator: elevator
-platform: "grantley"
-unique: "synology_grantley_fs3017"
+platform: "v1000"
+unique: "synology_v1000_1821+"
 serial:
   prefix:
-    - "1650"
-  middle: "O8N"
-  suffix: "numeric"
+  - "2110"
+  middle: "SKR"
+  suffix: "alpha"
 dom: 2
 dt: true
-disks: 24
-beta: true
+disks: 8
+beta: false
 productvers:
   "7.1":
-    kver: "3.10.108"
+    kver: "4.4.180"
     rd-compressed: false
     cmdline:
       <<: *cmdline
     synoinfo:
       <<: *synoinfo
     patch:
-      - "ramdisk-common-disable-root-pwd.patch"
-      - "ramdisk-common-init-script.patch"
-      - "ramdisk-common-etc-rc.patch"
-      - "ramdisk-42951-post-init-script.patch"
+    - "ramdisk-common-disable-root-pwd.patch"
+    - "ramdisk-common-init-script.patch"
+    - "ramdisk-common-etc-rc.patch"
+    - "ramdisk-42951-post-init-script.patch"
 
   "7.2":
-    kver: "3.10.108"
+    kver: "4.4.302"
     rd-compressed: false
     cmdline:
       <<: *cmdline
     synoinfo:
       <<: *synoinfo
     patch:
-      - "ramdisk-64216-disable-root-pwd.patch"
-      - "ramdisk-64216-init-script.patch"
-      - "ramdisk-common-etc-rc.patch"
-      - "ramdisk-42951-post-init-script.patch"
+    - "ramdisk-64216-disable-root-pwd.patch"
+    - "ramdisk-64216-init-script.patch"
+    - "ramdisk-common-etc-rc.patch"
+    - "ramdisk-42951-post-init-script.patch"
