--- a/DS718+.yml
+++ b/DS718+.yml
@@ -20,8 +20,8 @@ platform: "apollolake"
 unique: "synology_apollolake_718+"
 serial:
   prefix:
-  - "0000"
-  middle: "XXX"
+  - "1930"
+  middle: "PEN"
   suffix: "numeric"
 flags:
 - "movbe"
