--- a/DS720+.yml
+++ b/DS720+.yml
@@ -17,6 +17,11 @@ cmdline: &cmdline
   syno_ttyS0: "serial,0x3f8"
   syno_ttyS1: "serial,0x2f8"
   elevator: elevator
+patch: &patch
+  - "ramdisk-etc-rc-*.patch"
+  - "ramdisk-init-script-v4-*.patch"
+  - "ramdisk-post-init-script-*.patch"
+  - "ramdisk-disable-root-pwd-*.patch"
 platform: "geminilake"
 unique: "synology_geminilake_720+"
 serial:
@@ -33,6 +38,15 @@ dt: true
 disks: 2
 beta: false
 productvers:
+  "7.0":
+    kver: "4.4.180"
+    rd-compressed: false
+    cmdline:
+      <<: *cmdline
+    synoinfo:
+      <<: *synoinfo
+    patch: *patch
+
   "7.1":
     kver: "4.4.180"
     rd-compressed: false
@@ -40,11 +54,7 @@ productvers:
       <<: *cmdline
     synoinfo:
       <<: *synoinfo
-    patch:
-      - "ramdisk-common-disable-root-pwd.patch"
-      - "ramdisk-common-init-script.patch"
-      - "ramdisk-common-etc-rc.patch"
-      - "ramdisk-42951-post-init-script.patch"
+    patch: *patch
 
   "7.2":
     kver: "4.4.302"
@@ -53,8 +63,4 @@ productvers:
       <<: *cmdline
     synoinfo:
       <<: *synoinfo
-    patch:
-      - "ramdisk-64216-disable-root-pwd.patch"
-      - "ramdisk-64216-init-script.patch"
-      - "ramdisk-common-etc-rc.patch"
-      - "ramdisk-42951-post-init-script.patch"
+    patch: *patch
