--- a/DS1819+.yml
+++ b/DS1819+.yml
@@ -1,9 +1,10 @@
 id: "DS1819+"
 synoinfo: &synoinfo
   support_disk_compatibility: "no"
-  support_memory_compatibility: "yes"
-  support_led_brightness_adjustment: "no"
+  support_memory_compatibility: "no"
   support_bde_internal_10g: "no"
+  support_led_brightness_adjustment: "no"
+  support_oob_ctl: "no"
   support_syno_hybrid_raid:
   supportraidgroup:
   maxlanport: "8"
