--- a/RS3618xs.yml
+++ b/RS3618xs.yml
@@ -2,8 +2,10 @@ id: "RS3618xs"
 synoinfo: &synoinfo
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
+  support_bde_internal_10g: "no"
   support_led_brightness_adjustment: "no"
   supportssdcache: "no"
+  support_oob_ctl: "no"
   support_syno_hybrid_raid:
   supportraidgroup:
   maxlanport: "8"
