--- a/RS2423+.yml
+++ b/RS2423+.yml
@@ -1,58 +1,42 @@
-id: "DS918+"
+id: "RS2423+"
 synoinfo: &synoinfo
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
   support_bde_internal_10g: "no"
   support_led_brightness_adjustment: "no"
-  support_leds_lp3943: "no"
   support_oob_ctl: "no"
+  support_leds_atmega1608: "no"
+  support_leds_lp3943: "no"
+  supportadt7490: "no"
   support_syno_hybrid_raid:
   supportraidgroup:
   maxlanport: "8"
   netif_seq: "0 1 2 3 4 5 6 7"
-  buzzeroffen: "0xffff"
 cmdline: &cmdline
-  HddHotplug: 0
+  synoboot2:
   syno_hdd_detect: 0
-  syno_hdd_powerup_seq: 0
+  SMBusHddDynamicPower: 1
   vender_format_version: 2
+  syno_ttyS0: "serial,0x3f8"
+  syno_ttyS1: "serial,0x2f8"
   elevator: elevator
 patch: &patch
   - "ramdisk-etc-rc-*.patch"
   - "ramdisk-init-script-v4-*.patch"
   - "ramdisk-post-init-script-*.patch"
   - "ramdisk-disable-root-pwd-*.patch"
-  - "ramdisk-disable-disabled-ports-*.patch"
-platform: "apollolake"
-unique: "synology_apollolake_918+"
+platform: "v1000"
+unique: "synology_v1000_rs2423+"
 serial:
   prefix:
-    - "1780"
-    - "1790"
-    - "1860"
-    - "1980"
-  middle: "PDN"
-  suffix: "numeric"
-arc:
-  serial: "1890PDN993218"
-  mac1: "0011329A73BB"
-  mac2: "0011329A73BC"
+    - "0000"
+  middle: "XXX"
+  suffix: "alpha"
 dom: 2
-disks: 4
-dt: false
+dt: true
+disks: 24
 beta: false
-flags:
-  - "movbe"
 productvers:
-  "7.0":
-    kver: "4.4.180"
-    rd-compressed: false
-    cmdline:
-      <<: *cmdline
-    synoinfo:
-      <<: *synoinfo
-    patch: *patch
-
   "7.1":
     kver: "4.4.180"
     rd-compressed: false
