--- a/SA3400.yml
+++ b/SA3400.yml
@@ -17,6 +17,7 @@ cmdline: &cmdline
   SMBusHddDynamicPower: 1
   vender_format_version: 2
   elevator: elevator
+  modprobe.blacklist: scsi_transport_sas
 patch: &patch
   - "ramdisk-etc-rc-*.patch"
   - "ramdisk-init-script-v4-*.patch"
