--- a/SA3600.yml
+++ b/SA3600.yml
@@ -15,6 +15,7 @@ cmdline: &cmdline
   syno_hdd_powerup_seq: 0
   vender_format_version: 2
   elevator: elevator
+  modprobe.blacklist: scsi_transport_sas
 patch: &patch
   - "ramdisk-etc-rc-*.patch"
   - "ramdisk-init-script-v4-*.patch"
