--- a/DVA3221.yml
+++ b/DVA3221.yml
@@ -1,5 +1,6 @@
 id: "DVA3221"
 synoinfo: &synoinfo
+  support_uasp: "yes"
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
   support_led_brightness_adjustment: "no"
