--- a/DVA1622.yml
+++ b/DVA1622.yml
@@ -1,5 +1,6 @@
 id: "DVA1622"
 synoinfo: &synoinfo
+  support_uasp: "yes"
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
   support_bde_internal_10g: "no"
