--- a/RS4021xs+.yml
+++ b/RS4021xs+.yml
@@ -1,5 +1,6 @@
 id: "RS4021xs+"
 synoinfo: &synoinfo
+  support_uasp: "yes"
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
   support_bde_internal_10g: "no"
