--- a/DS1819+.yml
+++ b/DS1819+.yml
@@ -3,9 +3,8 @@ synoinfo: &synoinfo
   support_uasp: "yes"
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
-  support_bde_internal_10g: "no"
   support_led_brightness_adjustment: "no"
-  support_oob_ctl: "no"
+  support_bde_internal_10g: "no"
   support_syno_hybrid_raid:
   supportraidgroup:
   maxlanport: "8"
@@ -35,6 +34,8 @@ arc:
   mac2: "001132CF8874"
   mac3: "001132CF8875"
   mac4: "001132CF8876"
+flags:
+  - "movbe"
 dom: 2
 dt: false
 disks: 8
