--- a/DS2419+.yml
+++ b/DS2419+.yml
@@ -3,9 +3,8 @@ synoinfo: &synoinfo
   support_uasp: "yes"
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
-  support_bde_internal_10g: "no"
   support_led_brightness_adjustment: "no"
-  support_oob_ctl: "no"
+  support_bde_internal_10g: "no"
   support_syno_hybrid_raid:
   supportraidgroup:
   maxlanport: "8"
@@ -35,6 +34,8 @@ arc:
   mac2: "0011329498A6"
   mac3: "0011329498A7"
   mac4: "0011329498A8"
+flags:
+  - "movbe"
 dom: 2
 dt: false
 disks: 8
