--- a/DS423+.yml
+++ b/DS423+.yml
@@ -1,11 +1,11 @@
 id: "DS423+"
 synoinfo: &synoinfo
   support_uasp: "yes"
+  support_printer: "yes"
+  support_usb_printer: "yes"
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
-  support_bde_internal_10g: "no"
   support_led_brightness_adjustment: "no"
-  support_oob_ctl: "no"
   support_syno_hybrid_raid:
   supportraidgroup:
   maxlanport: "8"
@@ -13,7 +13,6 @@ synoinfo: &synoinfo
   buzzeroffen: "0xffff"
 cmdline: &cmdline
   intel_iommu: "igfx_off"
-  synoboot2:
   HddEnableDynamicPower: 1
   vender_format_version: 2
   syno_ttyS0: "serial,0x3f8"
