--- a/RS1619xs+.yml
+++ b/RS1619xs+.yml
@@ -1,11 +1,13 @@
 id: "RS1619xs+"
 synoinfo: &synoinfo
+  supportext4: "yes"
   support_uasp: "yes"
+  support_printer: "yes"
+  support_usb_printer: "yes"
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
-  support_bde_internal_10g: "no"
   support_led_brightness_adjustment: "no"
-  support_oob_ctl: "no"
+  support_bde_internal_10g: "no"
   support_syno_hybrid_raid:
   supportraidgroup:
   maxlanport: "8"
@@ -35,10 +37,10 @@ arc:
   mac2: "001132A904CB"
   mac3: "001132A904CC"
   mac4: "001132A904CD"
-dom: 2
+dom: 1
 disks: 4
 dt: false
-beta: true
+beta: false
 productvers:
   "7.1":
     kver: "4.4.180"
