--- a/RS2423+.yml
+++ b/RS2423+.yml
@@ -1,17 +1,17 @@
 id: "RS2423+"
 synoinfo: &synoinfo
+  supportext4: "yes"
   support_uasp: "yes"
+  support_printer: "yes"
+  support_usb_printer: "yes"
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
-  support_bde_internal_10g: "no"
   support_led_brightness_adjustment: "no"
-  support_oob_ctl: "no"
   support_syno_hybrid_raid:
   supportraidgroup:
   maxlanport: "8"
   netif_seq: "0 1 2 3 4 5 6 7"
 cmdline: &cmdline
-  synoboot2:
   syno_hdd_detect: 0
   SMBusHddDynamicPower: 1
   vender_format_version: 2
@@ -33,7 +33,7 @@ serial:
 dom: 2
 dt: true
 disks: 24
-beta: false
+beta: true
 productvers:
   "7.1":
     kver: "4.4.180"
