--- a/RS4021xs+.yml
+++ b/RS4021xs+.yml
@@ -1,20 +1,22 @@
 id: "RS4021xs+"
 synoinfo: &synoinfo
+  supportext4: "yes"
   support_uasp: "yes"
+  support_printer: "yes"
+  support_usb_printer: "yes"
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
-  support_bde_internal_10g: "no"
   support_led_brightness_adjustment: "no"
-  support_oob_ctl: "no"
+  support_bde_internal_10g: "no"
   support_syno_hybrid_raid:
   supportraidgroup:
   maxlanport: "8"
   netif_seq: "0 1 2 3 4 5 6 7"
 cmdline: &cmdline
-  syno_hdd_powerup_seq: 0
   HddHotplug: 0
-  vender_format_version: 2
   syno_hdd_detect: 0
+  syno_hdd_powerup_seq: 0
+  vender_format_version: 2
   elevator: elevator
 patch: &patch
   - "ramdisk-etc-rc-*.patch"
