--- a/SA3400.yml
+++ b/SA3400.yml
@@ -1,18 +1,20 @@
 id: "SA3400"
 synoinfo: &synoinfo
+  supportext4: "yes"
   support_uasp: "yes"
+  support_printer: "yes"
+  support_usb_printer: "yes"
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
-  support_bde_internal_10g: "no"
   support_led_brightness_adjustment: "no"
-  support_oob_ctl: "no"
+  support_bde_internal_10g: "no"
   support_syno_hybrid_raid:
   supportraidgroup:
+  supportsas: "no"
   maxlanport: "8"
   netif_seq: "0 1 2 3 4 5 6 7"
 cmdline: &cmdline
   HddHotplug: 0
-  synoboot2:
   syno_hdd_detect: 0
   syno_hdd_powerup_seq: 0
   SMBusHddDynamicPower: 1
@@ -26,7 +28,7 @@ patch: &patch
   - "ramdisk-disable-disabled-ports-*.patch"
 platform: "broadwellnk"
 unique: "synology_broadwellnk_sa3400"
-dom: 2
+dom: 1
 serial:
   prefix:
     - "1920"
