--- a/SA6400.yml
+++ b/SA6400.yml
@@ -1,17 +1,19 @@
 id: "SA6400"
 synoinfo: &synoinfo
+  supportext4: "yes"
   support_uasp: "yes"
+  support_printer: "yes"
+  support_usb_printer: "yes"
   support_disk_compatibility: "no"
   support_memory_compatibility: "no"
-  support_bde_internal_10g: "no"
   support_led_brightness_adjustment: "no"
   support_oob_ctl: "no"
   support_syno_hybrid_raid:
   supportraidgroup:
   maxlanport: "8"
   netif_seq: "0 1 2 3 4 5 6 7"
+  netif_seq_by_dts: "no"
 cmdline: &cmdline
-  synoboot2:
   SMBusHddDynamicPower: 1
   vender_format_version: 2
   syno_ttyS0: "serial,0x3f8"
