--- a/HD6500.yml
+++ b/HD6500.yml
@@ -13,6 +13,8 @@ synoinfo: &synoinfo
   supportsas: "no"
   support_multipath: "yes"
   support_install_only_dev: "no"
+  isolated_disk_system: "no"
+  required_system_disk_number: "0"
   maxlanport: "8"
   netif_seq: "0 1 2 3 4 5 6 7"
   buzzeroffen: "0xffff"
