--- a/HD6500.yml
+++ b/HD6500.yml
@@ -34,9 +34,11 @@ platform: "purley"
 unique: "synology_purley_hd6500"
 serial:
   prefix:
-    - "0000"
-  middle: "XXX"
+    - "20A0"
+    - "21C0"
+  middle: "RUR"
   suffix: "alpha"
+  macpre: 9009d0
 dom: 1
 dt: true
 disks: 24
