--- a/RS2423RP+.yml
+++ b/RS2423RP+.yml
@@ -12,11 +12,11 @@ synoinfo: &synoinfo
   supportadt7490: "no"
   support_syno_hybrid_raid:
   supportraidgroup:
+  HddEnableDynamicPower: "yes"
   maxlanport: "8"
   netif_seq: "0 1 2 3 4 5 6 7"
 cmdline: &cmdline
-  syno_hdd_detect: 0
-  SMBusHddDynamicPower: 1
+  HddHotplug: 1
   vender_format_version: 2
   syno_ttyS0: "serial,0x3f8"
   syno_ttyS1: "serial,0x2f8"
