--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,12 +68,12 @@ jobs:
             configs.zip
 
       - name: Release
-        uses: softprops/action-gh-release@v1
         if: success() && env.VERSION != ''
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: ${{ env.VERSION }}
+          tag: ${{ env.VERSION }}
           prerelease: ${{ inputs.prerelease }}
           body: |
             ${{ steps.Changelog.outputs.changelog }}
-          files: |
+          artifacts: |
             configs.zip
