--- a/platforms.yml
+++ b/platforms.yml
@@ -17,6 +17,7 @@ synoinfo: &synoinfo
   maxlanport: "8"
   netif_seq: ""
   buzzeroffen: "0xffff"
+  usbcopy: "yes"
 
 productvers4: &productvers4
   "7.0":
