--- a/platforms.yml
+++ b/platforms.yml
@@ -4,7 +4,9 @@ synoinfo: &synoinfo
   support_printer: "yes"
   support_usb_printer: "yes"
   support_disk_compatibility: "no"
+  support_synodrive_ability: "no"
   support_memory_compatibility: "no"
+  support_memory_limitation: "no"
   support_led_brightness_adjustment: "no"
   support_leds_atmega1608: "no"
   support_leds_lp3943: "no"
@@ -12,6 +14,8 @@ synoinfo: &synoinfo
   support_syno_hybrid_raid: "no"
   supportraidgroup: "no"
   enableRCPower: "yes"
+  mem_max_mb: ""
+  mem_min_mb: ""
   support_fan: "no"
   support_fan_adjust_dual_mode: "no"
   supportadt7490: "no"
@@ -78,7 +82,6 @@ platforms:
     flags: ["movbe"]
     synoinfo:
       <<: *synoinfo
-      support_memory_limitation: "no"
     productvers: *productvers4
   geminilake:
     dt: true
