--- a/platforms.yml
+++ b/platforms.yml
@@ -14,8 +14,6 @@ synoinfo: &synoinfo
   support_syno_hybrid_raid: "no"
   supportraidgroup: "no"
   enableRCPower: "yes"
-  mem_max_mb: ""
-  mem_min_mb: ""
   support_fan: "no"
   support_fan_adjust_dual_mode: "no"
   supportadt7490: "no"
@@ -117,6 +115,7 @@ platforms:
     synoinfo:
       <<: *synoinfo
       netif_seq_by_dts: "no"
+      show_autoupdatetype_notify: "yes"
     productvers: *productvers5
   epyc7002:
     dt: true
