--- a/platforms.yml
+++ b/platforms.yml
@@ -30,6 +30,9 @@ productvers4: &productvers4
     kver: "4.4.302"
 
 productvers5: &productvers5
+  "7.1":
+    kpre: "7.1"
+    kver: "5.10.55"
   "7.2":
     kpre: "7.2"
     kver: "5.10.55"
