--- a/platforms-essential.yml
+++ b/platforms-essential.yml
@@ -15,19 +15,14 @@ synoinfo: &synoinfo
   support_syno_hybrid_raid: "no"
   supportraidgroup: "no"
   enableRCPower: "yes"
+  support_fan: "no"
+  support_fan_adjust_dual_mode: "no"
+  supportadt7490: "no"
   maxlanport: "8"
   netif_seq: ""
   buzzeroffen: "0xffff"
 
-productvers5: &productvers5
-  "7.1":
-    kpre: "7.1"
-    kver: "5.10.55"
-  "7.2":
-    kpre: "7.2"
-    kver: "5.10.55"
-
-productvers5n: &productvers5n
+productvers5n: &productvers5
   "7.1":
     kpre: "7.1"
     kver: "5.10.55"
@@ -41,12 +36,14 @@ productvers5n: &productvers5n
 platforms:
   epyc7002:
     dt: true
+    ccnt: 24
     synoinfo:
       <<: *synoinfo
       netif_seq_by_dts: "no"
-    productvers: *productvers5n
+    productvers: *productvers5
   geminilakenk:
     dt: true
+    ccnt: 8
     noflags: ["x2apic"]
     synoinfo:
       <<: *synoinfo
@@ -55,6 +52,7 @@ platforms:
     productvers: *productvers5
   r1000nk:
     dt: true
+    ccnt: 16
     synoinfo:
       <<: *synoinfo
       netif_seq_by_dts: "no"
@@ -62,6 +60,7 @@ platforms:
     productvers: *productvers5
   v1000nk:
     dt: true
+    ccnt: 16
     synoinfo:
       <<: *synoinfo
       netif_seq_by_dts: "no"
